# test-beta

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE  Makefile  README.md  ci-trigger.md  installer.wxs  release.sh
.github/aqt/: settings.ini
.github/workflows/: android-apk.yaml  android-build.yml  build-android.yml  build-cmake.yaml  build-ios.yml  build-linux.yml  build-macos.yml  build-wasm.yml  build-windows.yml  build.yaml  build.yml  ci-qt-build.yml  ci.yaml  ci.yml  clang-format-check.yaml  clang-format-daily.yaml  clang-format-pr.yaml  clang-tidy.yaml  clazy-analysis.yaml  clazy.yaml  cmake.yaml  codeql-analysis.yaml  coverage.yaml  cpack.yaml  cppcheck.yaml  deb-package.yaml  deploy-gh-pages-branch.yml  deploy-gh-pages.yml  dmg-installer.yaml  install-qt-and-build.yaml  ios-check.yml  linux-installer.yml  macos-installer.yaml  macos-installer.yml  pages-deploy.yaml  qdoc.yaml  release.yaml  test-coverage.yaml  test.yaml  tests.yaml  (+6 more)
cmake/: android.toolchain.cmake  ios.toolchain.cmake  placeholder.txt
config/: cpp.cmake  qt-modules.cmake  qt-version.cmake  qt.cmake
config/android/: AndroidManifest.xml  build.gradle  gradle.properties
config/android/app/: build.gradle
config/android/app/src/main/: AndroidManifest.xml
config/android/app/src/main/java/org/example/testapp/: MainActivity.java
docs/: README-installation-android.md  README-installation-ios.md  README-installation-linux.md  README-installation-macos.md  README-installation-web.md  README-installation-windows.md  README.md  collaborer.md  github.md  guide.md  index.html  testabilite.md  testapp.qdocconf
installer/linux/: build-deb.sh  control  uninstall.sh
installer/linux/DEBIAN/: postinst  postrm
installer/linux/usr/share/applications/: testapp.desktop
installer/linux/usr/share/icons/hicolor/64x64/apps/: .gitkeep
installer/macos/: create-dmg.sh
installer/windows/: build-msi.bat  installer.nsi  installer.wxs
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/org/testapp/: MainActivity.java
platform/ios/: CMakeLists.txt  Info.plist
platform/web/: CMakeLists.txt  index.html  main.cpp
qml/: Main.qml
src/: CMakeLists.txt  calculator.cpp  calculator.h  dummy_codeql.cpp  hello_ios.cpp  main.cpp
test-beta-main/config/android/app/src/main/java/org/example/testapp/: MainActivity.java
test-main/config/android/app/src/main/libs/: .keep
test-main/src/: hello_ios.cpp
tests/: CMakeLists.txt  README.md
tests/cpp-tests/: CMakeLists.txt  tst_calculator.cpp  tst_cpptest.cpp
tests/qml-tests/: CMakeLists.txt  main.cpp  setup.cpp  setup.h  tst_button.qml  tst_test1.qml
tests/qt-tests/: CMakeLists.txt  tst_test1.cpp
web-dist/: index.html  serve-web.sh
